feat(MA-9): update patient endpoint
